{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 161,
  "lineage": "29b536b1-1cd8-d8e0-3062-eb83da0d4edf",
  "resources": [
    {
      "module": "module.aws_producao",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_1",
      "provider": "module.aws_producao.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499999449098:subnet/subnet-0cd5603b4d058b83f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd5603b4d058b83f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499999449098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b9808c7e01d60bd5"
          }
        }
      ]
    },
    {
      "module": "module.aws_producao",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_2",
      "provider": "module.aws_producao.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499999449098:subnet/subnet-04861e670f4038de8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04861e670f4038de8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "499999449098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b9808c7e01d60bd5"
          }
        }
      ]
    },
    {
      "module": "module.aws_producao",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "module.aws_producao.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499999449098:vpc/vpc-0b9808c7e01d60bd5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-000f8df845c60b458",
            "default_route_table_id": "rtb-04190747642dab361",
            "default_security_group_id": "sg-01a54e4f276302b29",
            "dhcp_options_id": "dopt-019ecbc588d32d0f9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b9808c7e01d60bd5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04190747642dab361",
            "owner_id": "499999449098"
          }
        }
      ]
    },
    {
      "module": "module.aws_producao",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadbalance",
      "provider": "module.aws_producao.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:499999449098:loadbalancer/app/tf-lb-20231005170612738100000003/3a6eaa89229759f9",
            "arn_suffix": "app/tf-lb-20231005170612738100000003/3a6eaa89229759f9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20231005170612738100000003-679311113.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:499999449098:loadbalancer/app/tf-lb-20231005170612738100000003/3a6eaa89229759f9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20231005170612738100000003",
            "security_groups": [
              "sg-01a54e4f276302b29"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04861e670f4038de8"
              },
              {
                "subnet_id": "subnet-0cd5603b4d058b83f"
              }
            ],
            "subnets": [
              "subnet-04861e670f4038de8",
              "subnet-0cd5603b4d058b83f"
            ],
            "vpc_id": "vpc-0b9808c7e01d60bd5",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.aws_producao.aws_default_subnet.subnet_1",
            "module.aws_producao.aws_default_subnet.subnet_2"
          ]
        }
      ]
    },
    {
      "module": "module.aws_producao",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "entradaLB",
      "provider": "module.aws_producao.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:499999449098:listener/app/tf-lb-20231005170612738100000003/3a6eaa89229759f9/12c866e3f3fd3151",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:499999449098:targetgroup/maquinaAlvo/81881a695628d0de",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:499999449098:listener/app/tf-lb-20231005170612738100000003/3a6eaa89229759f9/12c866e3f3fd3151",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:499999449098:loadbalancer/app/tf-lb-20231005170612738100000003/3a6eaa89229759f9",
            "port": 8000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_producao.aws_default_subnet.subnet_1",
            "module.aws_producao.aws_default_subnet.subnet_2",
            "module.aws_producao.aws_default_vpc.default",
            "module.aws_producao.aws_lb.loadbalance",
            "module.aws_producao.aws_lb_target_group.alvoLoad"
          ]
        }
      ]
    },
    {
      "module": "module.aws_producao",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alvoLoad",
      "provider": "module.aws_producao.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:499999449098:targetgroup/maquinaAlvo/81881a695628d0de",
            "arn_suffix": "targetgroup/maquinaAlvo/81881a695628d0de",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:499999449098:targetgroup/maquinaAlvo/81881a695628d0de",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "maquinaAlvo",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b9808c7e01d60bd5"
          },
          "dependencies": [
            "module.aws_producao.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_producao",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "module.aws_producao.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:499999449098:security-group/sg-0c9e74acd93cb0989",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9e74acd93cb0989",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Prod",
            "name_prefix": "",
            "owner_id": "499999449098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "group1"
            },
            "tags_all": {
              "Name": "group1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9808c7e01d60bd5"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}